[package]
name = "twitch-eventsub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
url = "2.5.8"
futures = "0.3.31"
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
dotenv = "0.15.0"
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

[features]
default = []
verbose = [] 
